# PyFWI

./: CITATION.cff  README.md  index.md  pyproject.toml  readthedocs.yaml  requirements.txt  seismic_io.py  setup.cfg  setup.py
.github/workflows/: pr.yml  publish.yml
docs/: CNAME  PyFWI.rst  conf.py  index.rst
docs/_build/doctrees/: PyFWI.doctree  environment.pickle  getting_started.doctree  index.doctree  intro.doctree
docs/_build/html/: .buildinfo  PyFWI.html  genindex.html  getting_started.html  index.html  intro.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: PyFWI.rst  conf.py
docs/sub_doc/: example.ipynb  example.rst  forward_modeling.rst  fwi_example.rst  grad_pytorch.ipynb  grad_pytorch.rst  init.rst  inversion.rst  rock_physics.rst  tools.rst
docs/sub_doc/.ipynb_checkpoints/: example-checkpoint.ipynb
example/: fwi_example.ipynb  fwi_example_crosswell.ipynb  fwi_example_surface.ipynb  fwi_example_surface.py  grad_pytorch.ipynb  gradient_example.ipynb  tlfwi_example_crosswell.ipynb
src/PyFWI/: FWI.py  __init__.py  acquisition.py  earth_model.py  elastic.cl  elastic_crosswell.cl  elastic_surface.cl  elastic_velocity.cl  elastic_velocity_CROSSWELL.cl  elastic_velocity_SURFACE.cl  fwi.py  fwi_tools.py  grad_switcher.py  grad_swithcher.py  model_dataset.py  optimization.py  processing.py  rock_physics.py  seiplot.py  seismic_io.py  tl_fwi.py  torchfwi.py  version.py  wave_propagation.py
src/PyFWI/data/: Dupuy2011_Moduli_data.mat
src/PyFWI/torch/: wave_propagation.py
src/exp_seispy/: seismic_io.py
test/: test_ricker.py
(+1045 files in other folders)
