[metadata]
name = PyFWI
version = 0.0.1
author = Amir Mardan
author_email = mardan.ah69@gmail.com
description = The initial package for seismic FWI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AmirMardan/PyFWI
project_urls =
    Bug Tracker = https://github.com/AmirMardan/PyFWI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
