[metadata]
name = PyFWI
version = 0.0.4
author = Amir Mardan
author_email = mardan.ah69@gmail.com
description = The initial package for seismic FWI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AmirMardan/PyFWI
project_urls =
    Bug Tracker = https://github.com/AmirMardan/PyFWI/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Intended Audience :: Education
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
